lanecwe-Prod/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Admin_Flag_Real__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admin_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from User login reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Role__c</fullName>
        <description>Used to identify what type of role users have; specifically to identify reps from mgmt for contract expiration emails.</description>
        <inlineHelpText>Used to identify what type of role users have; specifically to identify reps from mgmt for contract expiration emails.</inlineHelpText>
        <label>Business Role</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>Temporary field for data migration.</description>
        <label>Channel</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>ADM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Conferencing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Care/Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECS Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECS Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECS SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA : Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA : Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fin&amp;Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS Diamond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCS Video Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunters CEUR/NEUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunters WEUR/SEUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iMeet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IST Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_for_Next_Report_Trigger__c</fullName>
        <label>Date for Next Report Trigger</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_for_report_trigger__c</fullName>
        <label>Date for Report Trigger</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Docusign_email_group__c</fullName>
        <description>CASE(Channel__c,
&apos;Ent - AAE&apos;, &quot;dsnaaae@pgi.com&quot;,
&apos;SaaS Base&apos;, &quot;dsnabase@pgi.com&quot;,
&apos;E-Commerce&apos;, &quot;dsnaecommerce@pgi.com&quot;,
&quot;Partners&quot;, &quot;dsnapartners@pgi.com&quot;,
&quot;Budget Conferencing&quot;, &quot;dsnabudgetconferencing&quot;,
&quot;dsna_test@pgi.com&quot;
)</description>
        <formula>/*CASE(Channel__c,
&apos;Ent - AAE&apos;, &quot;dsnaaae@pgi.com&quot;,
&apos;SaaS Base&apos;, &quot;dsnabase@pgi.com&quot;, 
&apos;SMB - Base&apos;, &quot;dsnabase@pgi.com&quot;, 
&apos;E-Commerce&apos;, &quot;dsnaecommerce@pgi.com&quot;, 
&quot;Partners&quot;, &quot;dsnapartners@pgi.com&quot;,
&quot;Budget Conferencing&quot;, &quot;Unable to Use eSignature at this time&quot;,
&quot;dsna_test@pgi.com&quot;
)
*/
&quot;dsna_test@pgi.com&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Docusign email group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Support_Alias__c</fullName>
        <description>Used for alias to put in default email template signatures for all Cases Support agents.</description>
        <label>Email Support Alias</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GCS_Diamond_Partner_Only_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GCS Diamond Partner Only User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KeyForContract__c</fullName>
        <description>1 - PGi
2 - Budget Conferencing
3 - TBD
4 - TBD</description>
        <label>KeyForContract</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_Of_Authority__c</fullName>
        <description>It depicts which Authority level the User Belongs to</description>
        <inlineHelpText>Anything above Level 1 will typically be for use by sales management, product team, or contract users.</inlineHelpText>
        <label>Level Of Authority</label>
        <picklist>
            <picklistValues>
                <fullName>Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Repurposed the Location field to house Management Level Reports.   Currently used for the SVP layer in Enterprise and Partners channels only, but could be expanded as needed.</description>
        <label>Management Level Report</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Copy__c</fullName>
        <description>Manager Field From User Object</description>
        <formula>Manager.FirstName + &quot; &quot; +  Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_x2__c</fullName>
        <formula>Manager.Manager.FirstName + &quot; &quot; + Manager.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mgr&apos;s Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Override_Validation_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used exclusively to give users the ability to override validation rules by having this checked.  Also is built into every validation rule that shouldnt affect end users.</description>
        <inlineHelpText>Do not check this box for any users who are not admins</inlineHelpText>
        <label>Override Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_Name_Text__c</fullName>
        <formula>Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Name (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
                <color>#3333FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
                <color>#CC6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Report_Trigger_Start__c</fullName>
        <label>Report Trigger Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Role_Text__c</fullName>
        <formula>UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_18_ID__c</fullName>
        <formula>Id 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC 18 ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_SALESMANAGER_ID__c</fullName>
        <label>TESLA SALESMANAGER ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TESLA_SalesRep_Email__c</fullName>
        <label>TESLA SalesRep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyReminder__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <label>SurveyReminder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__reminderStringSize__c</fullName>
        <formula>LEN(TIMBASURVEYS__SurveyReminder__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>reminderStringSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Terr__c</fullName>
        <description>Temporary field for data migration.</description>
        <label>Terr</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_can_select_Account_Partner_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User can select Account Partner Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uses_Lead_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Helps us know that someone is assigned to any of the lead assignment rules</inlineHelpText>
        <label>Uses Lead Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFMembershipStatus__c</fullName>
        <label>DSProSFMembershipStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFPassword__c</fullName>
        <label>DSProSFPassword</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFUsername__c</fullName>
        <description>DocuSign username</description>
        <label>DSProSFUsername</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isManager1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should be selected if the user is a first-level manager.  This would be someone with direct reports, but who&apos;s direct reports do not have direct reports.</description>
        <inlineHelpText>Has direct reports, but no direct reports of direct reports.</inlineHelpText>
        <label>isManager1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>user_external_id__c</fullName>
        <description>Unique id of this user in an external system.  Used for data migrations.</description>
        <externalId>true</externalId>
        <label>user_external_id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Active_Inactive_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Region__c</columns>
        <columns>Location__c</columns>
        <columns>Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>startsWith</operation>
            <value>x-</value>
        </filters>
        <label>Active Inactive Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active_APAC_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ADDRESS_COUNTRY</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Region__c</columns>
        <columns>Location__c</columns>
        <columns>Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>APAC</value>
        </filters>
        <label>All Active APAC Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active_EMEA_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Region__c</columns>
        <columns>Location__c</columns>
        <columns>Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <label>All Active EMEA Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active_Manager_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Region__c</columns>
        <columns>Location__c</columns>
        <columns>Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Mgr</value>
        </filters>
        <label>All Active Manager Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active_NA_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Region__c</columns>
        <columns>Location__c</columns>
        <columns>Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>NA</value>
        </filters>
        <label>All Active NA Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active_Never_Logged_in_Non_ADM_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Region__c</columns>
        <columns>Location__c</columns>
        <columns>Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>notContain</operation>
            <value>ADM</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>notEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>Admin_Flag__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Active Never Logged in Non-ADM Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>Channel__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Region__c</columns>
        <columns>Location__c</columns>
        <columns>SFDC_18_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Admin_Lite_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Region__c</columns>
        <columns>Location__c</columns>
        <columns>Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Admin Lite</value>
        </filters>
        <label>All Admin Lite Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Inactive_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Region__c</columns>
        <columns>Location__c</columns>
        <columns>Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Inactive Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Marketing_Users</fullName>
        <columns>SFDC_18_ID__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Region__c</columns>
        <columns>Location__c</columns>
        <columns>Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>marketing</value>
        </filters>
        <label>All Marketing Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_System_Admin_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Region__c</columns>
        <columns>Location__c</columns>
        <columns>Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active System Admin Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Deactivated_Users_to_Remove</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Region__c</columns>
        <columns>Location__c</columns>
        <columns>Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Deactivated Users to Remove</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_NA_Users_not_setup_for_DS</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>NA</value>
        </filters>
        <filters>
            <field>Channel__c</field>
            <operation>notEqual</operation>
            <value>Budget Conferencing,GCS Diamond,Information Systems,Marketing,None,Fin&amp;Bill</value>
        </filters>
        <filters>
            <field>Channel__c</field>
            <operation>notEqual</operation>
            <value>IST Team,GCS SE,Sales Operations,System Admin,Training</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>mgr</value>
        </filters>
        <label>New NA Users not setup for DS</label>
        <language>en_US</language>
        <sharedTo>
            <group>SystemAdminUsers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>dsfs__DocuSignActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>DocuSign Active Users</label>
    </listViews>
    <listViews>
        <fullName>dsfs__DocuSignInactiveUsers</fullName>
        <booleanFilter>(1 or 2) and 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>equals</operation>
            <value>null</value>
        </filters>
        <filters>
            <field>dsfs__DSProSFUsername__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DocuSign Inactive Users</label>
    </listViews>
    <namedFilters>
        <fullName>Lead_00N3000000AQD5OEAX</fullName>
        <active>true</active>
        <errorMessage>The user you searched for isnt listed as an AE, please remove the filter and try again.</errorMessage>
        <field>Lead.AE_Owner__c</field>
        <filterItems>
            <field>User.Title</field>
            <operation>contains</operation>
            <value>Account Executive, AE, Acct Executive, Account Exec</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Lead_AE Owner</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ia00000021fyKEAQ_00Na000000AR5OOEA1</fullName>
        <active>true</active>
        <errorMessage>You can only select GCS SE or ECS SE.  Please submit a case if you cannot find the person you are searching for.</errorMessage>
        <field>Implementation_Services__c.Sales_Engineer__c</field>
        <filterItems>
            <field>User.Channel__c</field>
            <operation>equals</operation>
            <value>ECS SE, GCS SE</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Implementation Services_Sales Engineer</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ie00000004lEiEAI_00Ne0000000gZrnEAE</fullName>
        <active>true</active>
        <errorMessage>This user isnt part of the IST Team</errorMessage>
        <field>Training__c.Trainer__c</field>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>IST Team</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Training Session_Trainer</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01If00000004NJcEAM_00Nf0000000KFwoEAG</fullName>
        <active>true</active>
        <field>Implementation_Services__c.Adoption_Specialist_Assigned__c</field>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>IST Team</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Implementation Services_Adoption Special</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01If00000004NJcEAM_00Nf0000000KFwtEAG</fullName>
        <active>true</active>
        <errorMessage>This user isnt part of the IST Team</errorMessage>
        <field>Implementation_Services__c.Training_Specialist_Assigned__c</field>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>IST Team</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Implementation Services_Training Special</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01If00000004NJcEAM_00Nf0000000KGk0EAG</fullName>
        <active>true</active>
        <field>Implementation_Services__c.Technical_Specialist__c</field>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>IST Team</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Implementation Services_Technical Specia</name>
    </namedFilters>
    <validationRules>
        <fullName>Can_Not_Change_User_Name_For_PGiIntrgrat</fullName>
        <active>true</active>
        <errorConditionFormula>/* DO NOT ever add the override validation rule*/
OR( 
	AND( 
		OR( ISCHANGED(FirstName), ISCHANGED(LastName) ),
		OR( 
			AND( UPPER( PRIORVALUE(FirstName) ) = &quot;PGI&quot;, UPPER( PRIORVALUE(LastName) ) = &quot;INTEGRATION&quot; ), 
			AND( UPPER(FirstName) = &quot;PGI&quot;,	UPPER(LastName) = &quot;INTEGRATION&quot; )
		) 
	), 
	AND( 
		ISNEW() , 
		AND( UPPER(FirstName) = &quot;PGI&quot;,	UPPER(LastName) = &quot;INTEGRATION&quot; )
	) ,
AND(
                    ISCHANGED(Username),
                    LOWER(PRIORVALUE(Username)) = &quot;pgiintegration@pgi.com&quot;
)
)</errorConditionFormula>
        <errorMessage>User&apos;s name or Username cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Deactivat_if_assignment_rule_role</fullName>
        <active>true</active>
        <description>Will fire an error message if someone tries to save an SMB Acq user, and others eventually without checking the Uses Lead Assignment Rule checkbox.</description>
        <errorConditionFormula>AND(
           CONTAINS( UserRole.Name , &quot;Reps&quot;), 
           CONTAINS( UserRole.Name , &quot;SMB Acq&quot;),
           IsActive = False,
           Uses_Lead_Assignment__c = True
)</errorConditionFormula>
        <errorDisplayField>Uses_Lead_Assignment__c</errorDisplayField>
        <errorMessage>Please ensure this user has been deactivated in the Round Robin Lead assignment rules.  Please uncheck this field in order to save the record and email salesforcecrmsupport@pgi.com to get this resolved ASAP.</errorMessage>
    </validationRules>
</CustomObject>